# Simple-12306

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Simple-12306.cbp  Simple-12306.depend  Simple-12306.layout  编译注意事项.txt
Data/: sold_tickets_list.txt  tickets_list.txt
TicketManagementSystem/: TicketsManagementSystem.c  admin_user.c  manage_records.c  manage_tickets.c  query.c  salesman.c  statistics.c  stdafx.c  stdafx.h  tickets.h  uthash.h
TicketManagementSystem/Data/: sold_tickets_list.txt  tickets_list.txt
TicketManagementSystem/ExternalData/: added_tickets.txt
